Fixed alignment issues of App component (centered)

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,9 +8,11 @@ html, body, div.App  {
 div.App {
   background-color: #090979;
   font-family: 'Turret Road', cursive;
-  padding: 5%;
-  height: 95%;
-  width: 95%;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 
 /* Set uniform color for all text in div.app*/
